# sundaystudio

./: .gitignore  .prettierignore  CLAUDE.md  README.md  commitlint.config.js  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  DECISIONS.md  SESSION-PROGRESS-2026-06-03.md
scripts/: fetch-ffmpeg.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_track_voice_preset.sql
src-tauri/src/: account.rs  error.rs  lib.rs  main.rs
src-tauri/src/ai/: jingle.rs  leveling.rs  mod.rs  shownotes.rs
src-tauri/src/audio/: devices.rs  mod.rs  peaks.rs  playback.rs  settings.rs  tone.rs
src-tauri/src/audio/recorder/: command.rs  meters.rs  mod.rs  monitor.rs  rate.rs  resampler.rs  session.rs  stream.rs  writer.rs
src-tauri/src/commands/: account.rs  app.rs  audio.rs  deeplink.rs  dsp.rs  edit.rs  export.rs  mod.rs  project.rs
src-tauri/src/dsp/: biquad.rs  chain.rs  compressor.rs  deesser.rs  eq.rs  gate.rs  limiter.rs  loudness.rs  master.rs  mod.rs  multiband.rs  saturator.rs  silence.rs
src-tauri/src/export/: encode.rs  fade.rs  format.rs  mod.rs  render.rs
src-tauri/src/project/: fsutil.rs  mod.rs  model.rs  registry.rs  scast.rs  store.rs  templates.rs
src-tauri/src/services/: deeplink.rs  mod.rs
src-tauri/tests/: audio_golden.rs  edit_commands.rs  playback_resolve.rs  project_store.rs  recording_transport.rs
src-tauri/tests/goldens/: tone_440hz_48k_1s.fnv
src/components/: Brand.tsx  CommandPalette.tsx  ThemeToggle.tsx
src/components/audio/: JingleCard.tsx  LevelMeter.tsx  RecordButton.tsx  Timecode.tsx  TrackHeader.tsx  Waveform.tsx  index.ts
src/components/ui/: Button.tsx  StatusBanner.tsx
src/features/design/: DesignPage.tsx
src/features/diagnostics/: DiagnosticsPage.tsx  ImportFromLink.tsx
src/features/edit/: EditPage.tsx  (+4 more)
src/lib/: cn.ts  deeplinkImport.ts  editStack.ts  editing.ts  exportPlan.ts  format.ts  i18n.ts  ipc.ts  jingle.ts  loudness.ts  meter.ts  peaks.ts  persistQueue.ts  session.ts  theme.ts  timeline.ts  useRecordingStatus.ts
src/styles/: globals.css  tokens.css
tests/: setup.ts
tests/e2e/: design.spec.ts  smoke.spec.ts
tests/integration/: audio-primitives.test.tsx  cn.test.ts  deeplinkImport.test.ts  editStack.test.ts  editing.property.test.ts  editing.test.ts  exportPlan.test.ts  format.test.ts  i18n.test.ts  ipc.test.ts  jingle-page.test.tsx  jingle.test.ts  loudness.test.ts  meter.test.ts  persistQueue.test.ts  recording-wiring.test.tsx  status-banner.test.tsx  timeline.test.ts  useRecordingStatus.test.tsx
(+52 files in other folders)
