[package]
name = "sundaystudio"
version = "0.1.0"
description = "Podcast & jingle production for churches — part of the Sunday suite"
authors = ["Richard Fossland"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sundaystudio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── Audio core ───────────────────────────────────────────────────────────────
# These two are load-bearing from Phase 0.1: cpal proves cross-platform device
# I/O (CoreAudio / WASAPI) links and enumerates; hound proves we can write a
# canonical WAV to disk. The rest of the engine grows on top of these.
cpal = "0.15"
hound = "3.5"
# Lock-free SPSC ring buffer — carries samples from the real-time audio
# callback to the writer thread without locks or allocation (Phase 1.2).
rtrb = "0.3"

# Project storage (Phase 2.1) — local-first SQLite via sqlx. Runtime-checked
# queries (no DATABASE_URL / .sqlx needed at compile time).
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v7"] }

# Type generation for the frontend (run with `cargo test export_bindings`)
ts-rs = { version = "11", features = ["serde-compat"] }

[dev-dependencies]
tempfile = "3"

[features]
default = []
# Later phases add the heavier audio/AI deps behind features so the default
# build compiles fast, offline, and with no extra system toolchain. Planned:
#   dsp   = ["dep:dasp", "dep:fundsp"]          # built-in effects (Phase 4)
#   resample = ["dep:rubato"]                   # sample-rate conversion (Phase 1)
#   rt    = ["dep:rtrb"]                         # lock-free ring buffer (Phase 1.2)
#   decode = ["dep:symphonia"]                  # MP3/FLAC/AAC/OGG decode (Phase 3)
#   db    = ["dep:sqlx", "dep:uuid"]            # project storage (Phase 2.1)
#   ai    = ["dep:reqwest"]                      # Anthropic / Suno wrappers (Phase 5/6)
#   onnx  = ["dep:ort"]                          # local ML inference (Phase 3.3/5)
